# timekpr-next-remote

./: .gitignore  Dockerfile  main-dev.py  main.py  pyproject.toml  sync.py  test.py  timekpr-next-web.py  timekpr-next.py  web.py
blueprints/: admin.py  sync.py
daemon/: README.md  pyproject.toml
daemon/debian/: changelog  control  rules  timekpr-next-remote-daemon.service
daemon/service/: timekpr-next-remote-daemon.service
daemon/timekpr_remote/: daemon.py
templates/: index.html
